--- a/index.html
+++ b/index.html
@@ -207,6 +207,73 @@
       </tbody>
     </table>
   </section>
+  <section id="dashboard" class="container active">
+  <h2>📊 Dashboard</h2>
+  <p>Celková hodnota portfolia: <strong>1 325 000 CZK</strong></p>
+  <p>Celkový výnos: <span class="gain">+6.7 %</span></p>
+  <p>Roční pasivní příjem: <strong>43 200 CZK</strong></p>
+  <canvas id="dashboardPieChart" style="max-width: 600px; margin-top: 2rem;"></canvas>
+</section>
+
+<section id="dividends" class="container">
+  <h2>💰 Dividendy – souhrn</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Rok</th>
+        <th>Celkem (USD)</th>
+        <th>Průměr/měsíc (USD)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2024</td>
+        <td>315.00</td>
+        <td>26.25</td>
+      </tr>
+      <tr>
+        <td>2025</td>
+        <td>487.50</td>
+        <td>40.63</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+<section id="diversification" class="container">
+  <h2>🧬 Diversifikace</h2>
+  <h3>Podle sektoru</h3>
+  <ul>
+    <li>Technologie: 45 %</li>
+    <li>Zdravotnictví: 20 %</li>
+    <li>Finance: 15 %</li>
+    <li>REITs: 10 %</li>
+    <li>Jiné: 10 %</li>
+  </ul>
+
+  <h3>Podle měny</h3>
+  <ul>
+    <li>USD: 90 %</li>
+    <li>EUR: 5 %</li>
+    <li>CZK: 5 %</li>
+  </ul>
+
+  <h3>Podle země</h3>
+  <ul>
+    <li>USA: 75 %</li>
+    <li>ČR: 10 %</li>
+    <li>Evropa: 10 %</li>
+    <li>Asie: 5 %</li>
+  </ul>
+</section>
+
+<section id="realestate" class="container">
+  <h2>🏘 Nemovitosti</h2>
+  <p>Počet nemovitostí: <strong>1</strong></p>
+  <p>Celková hodnota: <strong>3 200 000 CZK</strong></p>
+  <p>Měsíční nájem: <strong>12 500 CZK</strong></p>
+  <p>Roční výnos z nájmu: <strong>150 000 CZK</strong> (~4.7 %)</p>
+</section>
 
   <section id="target" class="container">
     <h2>🎯 Investiční cíl</h2>
