--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       margin: 0;
       padding: 0;
       background-color: #0d1117;
-      color: #ddd;
+      color: #dd; 
+      
     }
     nav {
       background-color: #161b22;
