--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       margin: 0;
       padding: 0;
       background-color: #0d1117;
-      color: #dd; 
-      
+      color: #ddd; 
     }
     nav {
       background-color: #161b22;
