--- a/index.html
+++ b/index.html
@@ -4,109 +4,198 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Investiční portfolio</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <title>Investiční Portfolio</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
-      background-color: #f4f4f4;
       font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
     }
-
-    .container {
-      max-width: 1600px;
-      margin: 20px auto;
-    }
-
-    .stock-card {
-      margin-bottom: 20px;
-    }
-
     .stock-icon {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
+      width: 24px;
+      height: 24px;
+      margin-right: 5px;
     }
-
-    .currency-switcher {
-      margin-bottom: 20px;
+    .section {
+      margin-bottom: 60px;
     }
   </style>
 </head>
 
 <body>
-  <div class="container">
-    <h1 class="text-center my-4">Přehled portfolia</h1>
-    <div class="currency-switcher text-end">
-      <label for="currencySelect">Měna: </label>
-      <select id="currencySelect" class="form-select w-auto d-inline-block">
+  <div class="container mt-5">
+    <h1 class="mb-4">📈 Moje investiční portfolio</h1>
+
+    <!-- Přepínač měny -->
+    <div class="mb-4">
+      <label for="currencySwitch">Zobrazit hodnoty v:</label>
+      <select id="currencySwitch" class="form-select" style="width: 200px; display: inline-block">
         <option value="CZK">CZK</option>
         <option value="USD">USD</option>
       </select>
     </div>
-    <div id="portfolio" class="row"></div>
+
+    <!-- Přehled portfolia -->
+    <div class="section">
+      <h3>📊 Přehled portfolia</h3>
+      <canvas id="portfolioChart"></canvas>
+    </div>
+
+    <!-- Tabulka s akciemi -->
+    <div class="section">
+      <h3>📃 Seznam akcií</h3>
+      <table class="table table-bordered">
+        <thead class="table-dark">
+          <tr>
+            <th>Název</th>
+            <th>Ticker</th>
+            <th>Logo</th>
+            <th>Počet</th>
+            <th>Průměrná nákupní cena</th>
+            <th>Aktuální cena</th>
+            <th>Celková hodnota</th>
+          </tr>
+        </thead>
+        <tbody id="stockTableBody"></tbody>
+      </table>
+    </div>
+
+    <!-- Osobní finance -->
+    <div class="section">
+      <h3>💰 Osobní finance</h3>
+      <p>Měsíční splátka hypotéky: <strong id="mortgagePayment">28 400 CZK</strong></p>
+      <p>Odhadovaný měsíční příjem: <strong id="monthlyIncome">61 500 CZK</strong></p>
+      <p>Poměr splátky k příjmu: <strong id="debtRatio"></strong></p>
+    </div>
+
+    <!-- Historie cen -->
+    <div class="section">
+      <h3>📅 Historie ceny akcií</h3>
+      <select id="historySelect" class="form-select mb-3" style="width: 300px"></select>
+      <canvas id="priceHistoryChart"></canvas>
+    </div>
+
   </div>
 
   <script>
-    const tickers = ["AAPL", "GOOGL", "AMZN", "MSFT", "AMD", "NVDA", "TSLA", "META", "DELL", "BTI", "O"];
-    const currencyRates = { CZK: 1, USD: 0.043 }; // Dynamicky načíst v ostré verzi
-    const currencySymbols = { CZK: "Kč", USD: "$" };
+    const stocks = [
+      { name: "British American Tobacco", ticker: "BTI", shares: 40, avgPrice: 29.85 },
+      { name: "Realty Income", ticker: "O", shares: 25, avgPrice: 52.12 },
+      { name: "Advanced Micro Devices", ticker: "AMD", shares: 10, avgPrice: 86.82 },
+      { name: "Alphabet (Google)", ticker: "GOOG", shares: 4, avgPrice: 155.15 },
+      { name: "Dell Technologies", ticker: "DELL", shares: 11, avgPrice: 82.48 }
+    ];
 
-    async function fetchStockData(ticker) {
-      const url = `https://apidojo-yahoo-finance-v1.p.rapidapi.com/stock/v2/get-summary?symbol=${ticker}&region=US`;
-      const options = {
-        method: 'GET',
+    const apiKey = "7907cfa146msh6ab915bab585a3bp190de3jsn931308660764";
+
+    const fetchStockData = async (ticker) => {
+      const response = await fetch(`https://yahoo-finance15.p.rapidapi.com/api/yahoo/qu/quote/${ticker}`, {
         headers: {
-          'X-RapidAPI-Key': '7907cfa146msh6ab915bab585a3bp190de3jsn931308660764',
-          'X-RapidAPI-Host': 'apidojo-yahoo-finance-v1.p.rapidapi.com'
+          'X-RapidAPI-Key': apiKey,
+          'X-RapidAPI-Host': 'yahoo-finance15.p.rapidapi.com'
         }
-      };
-      try {
-        const response = await fetch(url, options);
-        const result = await response.json();
-        return {
-          ticker,
-          name: result.price.longName,
-          price: result.price.regularMarketPrice.raw,
-          currency: result.price.currency,
-          logo: `https://logo.clearbit.com/${result.price.shortName}.com` // Může selhat – nahradit v praxi vlastní URL
-        };
-      } catch (error) {
-        console.error(error);
-        return null;
-      }
-    }
+      });
+      const data = await response.json();
+      return data[0].ask || data[0].regularMarketPrice;
+    };
 
-    async function renderPortfolio() {
-      const container = document.getElementById("portfolio");
-      container.innerHTML = "";
+    const updateTable = async () => {
+      const table = document.getElementById("stockTableBody");
+      table.innerHTML = "";
 
-      for (const ticker of tickers) {
-        const stock = await fetchStockData(ticker);
-        if (!stock) continue;
+      let totalCZK = 0;
 
-        const selectedCurrency = document.getElementById("currencySelect").value;
-        const conversionRate = currencyRates[selectedCurrency];
-        const convertedPrice = (stock.price / currencyRates[stock.currency] * conversionRate).toFixed(2);
+      for (const stock of stocks) {
+        const currentPrice = await fetchStockData(stock.ticker);
+        const valueUSD = stock.shares * currentPrice;
+        const valueCZK = valueUSD * 23.3; // přibližný kurz
+        totalCZK += valueCZK;
 
-        const card = document.createElement("div");
-        card.className = "col-md-4 stock-card";
-        card.innerHTML = `
-          <div class="card shadow-sm">
-            <div class="card-body">
-              <h5 class="card-title">
-                <img src="${stock.logo}" alt="logo" class="stock-icon me-2" onerror="this.style.display='none'">
-                ${stock.name} (${stock.ticker})
-              </h5>
-              <p class="card-text">Aktuální cena: <strong>${convertedPrice} ${currencySymbols[selectedCurrency]}</strong></p>
-            </div>
-          </div>
+        const row = `
+          <tr>
+            <td>${stock.name}</td>
+            <td>${stock.ticker}</td>
+            <td><img class="stock-icon" src="https://logo.clearbit.com/${stock.ticker.toLowerCase()}.com" onerror="this.src='https://via.placeholder.com/24'"/></td>
+            <td>${stock.shares}</td>
+            <td>${stock.avgPrice.toFixed(2)} USD</td>
+            <td>${currentPrice.toFixed(2)} USD</td>
+            <td>${valueCZK.toFixed(2)} CZK</td>
+          </tr>
         `;
-        container.appendChild(card);
-      }
-    }
+        table.innerHTML += row;
 
-    document.getElementById("currencySelect").addEventListener("change", renderPortfolio);
-    renderPortfolio();
+        const option = document.createElement("option");
+        option.value = stock.ticker;
+        option.text = stock.name;
+        document.getElementById("historySelect").appendChild(option);
+      }
+
+      renderPieChart();
+    };
+
+    const renderPieChart = () => {
+      const ctx = document.getElementById("portfolioChart").getContext("2d");
+      new Chart(ctx, {
+        type: "pie",
+        data: {
+          labels: stocks.map(s => s.ticker),
+          datasets: [{
+            data: stocks.map(s => s.shares),
+            backgroundColor: ["#4caf50", "#2196f3", "#ff9800", "#9c27b0", "#f44336"]
+          }]
+        },
+        options: { responsive: true }
+      });
+    };
+
+    const updateDebtRatio = () => {
+      const income = 61500;
+      const mortgage = 28400;
+      const ratio = (mortgage / income * 100).toFixed(1);
+      document.getElementById("debtRatio").textContent = `${ratio}%`;
+    };
+
+    const fetchPriceHistory = async (ticker) => {
+      const response = await fetch(`https://yahoo-finance15.p.rapidapi.com/api/yahoo/hi/history/${ticker}/1mo`, {
+        headers: {
+          'X-RapidAPI-Key': apiKey,
+          'X-RapidAPI-Host': 'yahoo-finance15.p.rapidapi.com'
+        }
+      });
+      const data = await response.json();
+      return data.items;
+    };
+
+    const renderHistoryChart = async (ticker) => {
+      const history = await fetchPriceHistory(ticker);
+      const dates = history.map(item => item.date);
+      const prices = history.map(item => item.close);
+
+      const ctx = document.getElementById("priceHistoryChart").getContext("2d");
+      new Chart(ctx, {
+        type: "line",
+        data: {
+          labels: dates,
+          datasets: [{
+            label: `Vývoj ceny ${ticker}`,
+            data: prices,
+            borderColor: "#3e95cd",
+            fill: false
+          }]
+        },
+        options: { responsive: true }
+      });
+    };
+
+    document.getElementById("historySelect").addEventListener("change", (e) => {
+      renderHistoryChart(e.target.value);
+    });
+
+    window.onload = async () => {
+      updateDebtRatio();
+      await updateTable();
+    };
   </script>
 </body>
 
