--- a/index.html
+++ b/index.html
@@ -197,5 +197,53 @@
     };
   </script>
 </body>
+  <!-- Investiční Web – Část 2 -->
+<section id="osobni-finance" class="bg-white py-20">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-extrabold text-gray-900 mb-6">Osobní finance</h2>
+    <p class="text-lg text-gray-700 mb-6">
+      Osobní finance tvoří základ každého investičního plánu. Zde najdete přehled důležitých nástrojů a kalkulaček, které vám pomohou plánovat rozpočet, sledovat výdaje a připravit se na budoucnost.
+    </p>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Kalkulačka rozpočtu</h3>
+        <p class="text-gray-700 mb-4">Zadejte své měsíční příjmy a výdaje a zjistěte, kolik můžete ušetřit nebo investovat.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Spustit kalkulačku</button>
+      </div>
+
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Plánovač cílů</h3>
+        <p class="text-gray-700 mb-4">Nastavte si finanční cíle – například koupi auta nebo bydlení – a sledujte svůj pokrok.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Plánovat</button>
+      </div>
+
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Nástroj na srovnání půjček</h3>
+        <p class="text-gray-700 mb-4">Porovnejte úrokové sazby, poplatky a podmínky různých půjček a hypoték.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Srovnat půjčky</button>
+      </div>
+
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Sledování výdajů</h3>
+        <p class="text-gray-700 mb-4">Zaznamenávejte si své denní výdaje a získejte přehled o svém finančním chování.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Zaznamenávat</button>
+      </div>
+
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Přehled příjmů</h3>
+        <p class="text-gray-700 mb-4">Evidujte své příjmy z různých zdrojů – práce, investic, vedlejších projektů.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Přidat příjem</button>
+      </div>
+
+      <div class="bg-gray-50 p-6 rounded-lg shadow">
+        <h3 class="text-xl font-semibold text-indigo-600 mb-2">Simulace důchodu</h3>
+        <p class="text-gray-700 mb-4">Zjistěte, jaký bude váš důchod na základě současného spoření a příspěvků.</p>
+        <button class="bg-indigo-600 text-white px-4 py-2 rounded hover:bg-indigo-700">Simulovat</button>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 </html>
